[package]
name = "qrt_rust_utils"
version = "1.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["qrt_rust_macros", "tg_notification", "log_util"
    , "downloader", "sanitizer", "ffmpeg_caller", "request_utils", "file_utils", "qrt_rust_macros", "mongodb_saver", "youtubedl-manager", "redis_manager"]
exclude = []
