[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1",features=["serde_derive"] }
tokio = { version = "1", features = ["fs"] }
tracing = "0.1"
url = "2"
sanitizer = { path = "../sanitizer" }
reqwest = "0"
derive_builder = "0"
chrono = { version="0",features=["serde"] }
