[package]
name = "ffmpeg_caller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1"
regex = "1"
tokio = { version = "1", features = ["io-util", "process", "rt", "io-std", "macros", "fs"] }
tracing = "0.1"
