[package]
name = "log_util"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = { version = "0" }
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
[features]
# disable other logging by default
default = []
tokio-debug = []