[package]
name = "log_util"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
console-subscriber = { version = "0" }
opentelemetry = { version = "*", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "*", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "*", features = ["tls-roots"] }
tonic = { version = "0", features = ["tls-roots"] }
time = { version = "0.3" }
tracing-opentelemetry = "0.18"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
[features]
# disable other logging by default
default = []
tokio-debug = []
