[package]
name = "mongodb_saver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
mongodb = { version = "2.2.0-beta", features = ["bson-chrono-0_4"] }
chrono = { version = "0", features = ["serde"] }
anyhow = "1"
futures = "0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde_json = "1.0.85"
[dev-dependencies]
tokio = { version = "1", features = ["macros"] }