[package]
name = "redis_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-redis = "0"
log_util = { path = "../log_util" }
[dev-dependencies]
tokio = { version = "1", features = ["macros"] }