[package]
name = "redis_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0"
deadpool-redis = "0"
redis = "0"
log_util = { path = "../log_util" }
futures = "0"
[dev-dependencies]
tokio = { version = "1", features = ["macros"] }