[package]
name = "video_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg_caller = { path = "../ffmpeg_caller" }
anyhow = "1"
log_util = { path = "../log_util" }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "process", "rt", "io-std", "macros", "fs"] }