[package]
name = "youtubedl-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["io-util", "process", "rt", "io-std", "macros", "fs"] }
async-recursion = "1"
tracing = "0.1"
log_util = { path = "../log_util" }
anyhow = "1"